technitium/resources/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-dns
  labels:
    app.kubernetes.io/name: technitium
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
