technitium/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dns-gateway
  labels:
    app: dns-gateway
spec:
  gatewayClassName: cilium-dns
  addresses:
    - type: IPAddress
      value: 192.168.178.249
  listeners:
    - name: dns-udp
      port: 53
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: Same
    - name: dns-tcp
      port: 53
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Same
