technitium/resources/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: technitium-tcp
spec:
  parentRefs:
    - name: dns-gateway
      kind: Gateway
      namespace: technitium
      group: gateway.networking.k8s.io
      sectionName: dns-tcp
  rules:
    - backendRefs:
        - name: technitium-dns
          group: ''
          namespace: technitium
          kind: Service
          port: 53
          weight: 1
